--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: "Open Sans", sans-serif;
+}
+
+header {
+    background-color: #003B4C;
+}
+
+h1 {
+    padding: 1rem;
+    margin: 0;
+    color: #F79020;
+}
+
+main {
+    padding: 1rem;
 }
