--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,11 @@ h1 {
 main {
     padding: 1rem;
 }
+
+MapBuilder {
+  /* margin: 0 auto; */
+  /* max-width: 80%; */
+  /* height: 50vh; */
+  height: 600px;
+  width: 600px;
+}
