--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans");
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
     font-family: "Open Sans", sans-serif;
+    min-height: 100vh;
+    max-width: 100vw;
 }
 
 header {
     background-color: #003B4C;
+    width: ;
 }
 
 h1 {
@@ -20,10 +22,7 @@ main {
     padding: 1rem;
 }
 
-MapBuilder {
-  /* margin: 0 auto; */
-  /* max-width: 80%; */
-  /* height: 50vh; */
-  height: 600px;
-  width: 600px;
+section div div div{
+  margin: 0 auto;
+  max-width: 100%;
 }
